test/org/midica/testfiles/failing/chord-with-note-percussion-mix.midica
INCLUDE inc/instruments.midica

CHORD test c d to
